force-app/main/default/objects/Barrier_Report__c/Barrier_Report__c.object-meta.xml
<CustomObject>
    <description>An intake describing what is hard, never why. May be fully anonymous. CONTAINS NO DIAGNOSIS, CONDITION, MEDICAL OR DISABILITY-TYPE FIELD BY DESIGN.</description>
    <label>Barrier Report</label>
    <nameField>
        <label>Report Number</label>
        <type>AutoNumber</type>
        <displayFormat>BR-{00000}</displayFormat>
    </nameField>
    <pluralLabel>Barrier Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>