force-app/main/default/objects/Barrier_Report__c/fields/Access_Profile__c.field-meta.xml
<CustomField>
    <fullName>Access_Profile__c</fullName>
    <description>The profile this report belongs to, if the person chose to attach one.</description>
    <inlineHelpText>Only set if the person chose to attach an identity. Empty here means anonymous, and anonymous is a complete and normal way to use this.</inlineHelpText>
    <label>Access Profile</label>
    <referenceTo>Access_Profile__c</referenceTo>
    <relationshipLabel>Barrier Reports</relationshipLabel>
    <relationshipName>Barrier_Reports</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>