force-app/main/default/objects/Barrier_Report__c/fields/Functional_Description__c.field-meta.xml
<CustomField>
    <fullName>Functional_Description__c</fullName>
    <description>What is hard, in the person's words. Never why.</description>
    <label>Functional Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>