force-app/main/default/objects/Barrier_Report__c/fields/Inbound_Modality__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Modality__c</fullName>
    <label>Inbound Modality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                    <default>true</default>
                    <label>Text</label>
                </value>
                <value>
                    <fullName>Voice note</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Image</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>