force-app/main/default/objects/Barrier_Report__c/fields/Interpreter_Needed__c.field-meta.xml
<CustomField>
    <fullName>Interpreter_Needed__c</fullName>
    <description>Set when inbound modality is signed video. Routes to a human. Never machine-translated.</description>
    <label>Interpreter Needed</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>