force-app/main/default/objects/Barrier_Report__c/listViews/All_Barrier_Reports.listView-meta.xml
<ListView>
    <fullName>All_Barrier_Reports</fullName>
    <columns>NAME</columns>
    <columns>Functional_Description__c</columns>
    <columns>Inbound_Modality__c</columns>
    <columns>Interpreter_Needed__c</columns>
    <columns>Anonymous__c</columns>
    <filterScope>Everything</filterScope>
    <label>All barrier reports</label>
</ListView>