force-app/main/default/objects/Barrier_Report__c/listViews/Needs_An_Interpreter.listView-meta.xml
<ListView>
    <fullName>Needs_An_Interpreter</fullName>
    <columns>NAME</columns>
    <columns>Inbound_Modality__c</columns>
    <columns>Functional_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Interpreter_Needed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Needs a human interpreter</label>
</ListView>