force-app/main/default/objects/Barrier_Report__c/listViews/Told_Us_Anonymously.listView-meta.xml
<ListView>
    <fullName>Told_Us_Anonymously</fullName>
    <columns>NAME</columns>
    <columns>Functional_Description__c</columns>
    <columns>Inbound_Modality__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Anonymous__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Told us anonymously</label>
</ListView>